--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,6 +26,16 @@
 
     <label for="sidebar-checkbox" class="sidebar-toggle"></label>
 
+    <div class="wrapper-footer">
+      <div class="container">
+        <footer class="footer">
+          {% include svg-icons.html %}
+        </footer>
+      </div>
+    </div>
+
+    {% include google_analytics.html %}
+
     <script>
       (function(document) {
         var toggle = document.querySelector('.sidebar-toggle');
