--- a/public/css/lanyon.css
+++ b/public/css/lanyon.css
@@ -190,6 +190,18 @@ a.sidebar-nav-item:focus {
   border-color: transparent;
 }
 
+.wrapper-footer {
+  margin-top: 40px;
+  border-top: 1px solid #202020;
+  border-bottom: 1px solid #202020 ;
+  background-color: #202020;
+}
+
+footer {
+  padding: 20px 0;
+  text-align: center;
+}
+
 @media (min-width: 48em) {
   .sidebar-item {
     padding: 1.5rem;
