--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -26,7 +26,7 @@
     {% endfor %}
     
     
-    <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub</a>
+    <!-- <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub</a> -->
 
   </nav>
 
