--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,8 +4,12 @@ layout: default
 
 <div class="post">
   <h1 class="post-title">{{ page.title }}</h1>
-  <span class="post-date">{{ page.date | date: "%Y %m %d" }}</span>
+  <hr/>
+  <span class="post-date">Created: {{ page.date | date: "%Y %m %d" }}</span>
+  {% include post_category.html %}
   {% include post_tags.html %}
+  <hr/>
+  <hr/>
   {{ content }}
 </div>
 
