--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en-us">
+<html lang="ko">
 
   {% include head.html %}
   {% include google_analytics.html %}
-  <body>
+  <body class="layout-reverse">
 
     {% include sidebar.html %}
 
