--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,12 +28,25 @@
 
     <div class="wrapper-footer">
       <div class="container">
+          <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+          <!-- 광고1 -->
+          <ins class="adsbygoogle"
+               style="display:block"
+               data-ad-client="ca-pub-9531188305700507"
+               data-ad-slot="3721865585"
+               data-ad-format="auto"></ins>
+          <script>
+          (adsbygoogle = window.adsbygoogle || []).push({});
+          </script>
+      </div>
+      <div class="container">
         <footer class="footer">
           {% include svg-icons.html %}
         </footer>
       </div>
     </div>
 
+    
     {% include google_analytics.html %}
 
     <script>
