--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -28,5 +28,16 @@ layout: default
     {% endfor %}
   </ul>
 </div>
-
+<div id="googleadsense" class="container">
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <!-- 광고1 -->
+    <ins class="adsbygoogle"
+         style="display:block"
+         data-ad-client="ca-pub-9531188305700507"
+         data-ad-slot="3721865585"
+         data-ad-format="auto"></ins>
+    <script>
+    (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+</div>
 {% include disqus.html disqus_identifier=page.disqus_identifier %}
