--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,7 @@
 
   {% include head.html %}
   {% include google_analytics.html %}
+  {% include google_adsense.html %}
   <body class="layout-reverse">
 
     {% include sidebar.html %}
