--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -65,7 +65,7 @@ body {
       -ms-text-size-adjust: 100%;
 }
 
-/* No `:visited` state is required by default (browsers will use `a`) */
+/* No category:visited` state is required by default (browsers will use `a`) */
 a {
   color: #268bd2;
   text-decoration: none;
@@ -73,7 +73,7 @@ a {
 a strong {
   color: inherit;
 }
-/* `:focus` is linked to `:hover` for basic accessibility */
+/* category:focus` is linked to category:hover` for basic accessibility */
 a:hover,
 a:focus {
   text-decoration: underline;
